# oz-union-be-12-team1

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  main.py  mypy.ini  pyproject.toml  quiz.xlsx
.github/ISSUE_TEMPLATE/: bug_report.yml  progress_report.yml
.github/workflow/: code_checks.yml
.github/workflows/: code_checks.yml
api/v1/: __init__.py  admin.py  assistant.py  auth.py  dev.py  gemini.py  google_auth.py  google_auth_service.py  inquiries.py  news.py  quiz.py  s3.py  schedules.py  todos.py  user_location.py  users.py  weather.py
app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
certs/: localhost.crt  localhost.key
core/: config.py  db.py  google_handler.py  security.py  verify_mail.py
migrations/models/: 0_20250918180416_init.py
models/: __init__.py  admin_usage_logs.py  ai_conversations.py  api_usage_logs.py  inquiries.py  notifications.py  push_subscriptions.py  schedule_notifications.py  schedules.py  todo.py  todos.py  token_revocations.py  user.py  user_locations.py  user_sessions.py  user_settings.py
models_backup/: ai_conversations.py
oz_union_be_team1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
repositories/: inquiries_repo.py  notifications_repo.py  schedules_repo.py  todos_repo.py  token_revocations_repo.py  user_locations_repo.py  user_repo.py
schemas/: inquiries.py  news.py  notifications.py  schedules.py  todos.py  token_revocations.py  user.py  user_locations.py
services/: auth_service.py  email_service.py  gemini_client.py  gemini_service.py  google_auth_service.py  inquiries_service.py  location_service.py  news_service.py  s3_service.py  schedules_service.py  todo_service.py  user_service.py  weather_service.py
