[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.9.1",
    "asyncpg>=0.30.0",
    "bcrypt<4.0.0",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "passlib[bcrypt]<4.0.0",
    "pre-commit>=4.3.0",
    "psycopg-binary>=3.2.10",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "tomlkit>=0.13.3",
    "tortoise-orm>=0.25.1",
    "uvicorn[standard]>=0.35.0",
]

[tool.aerich]
tortoise_orm = "core.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "."

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["./app"]